CHANGES
=======

v0.6.2
------

* Add context_processors application to EXCLUDE_APPS.

v0.6.1
------

* Added JINGO_INCLUDE_PATTERN.

v0.6
----

* Works with Django 1.5


v0.5
----

* Removed deprecated jingo.render() method.
* Removed deprecated jingo.views module.
* Include safe_django_forms monkeypatch as jingo.monkey.
* Add EXCLUDE_APPS default and clarify documentation.
* Add override kwarg to register.filter.