@@ -1,11 +1,16 @@
 language: python
 python:
- - "2.6"
- - "2.7"
+  - "2.6"
+  - "2.7"
+  - "3.3"
 env:
- - DJANGO_VERSION=1.4.5
- - DJANGO_VERSION=1.5.1
+  - DJANGO_VERSION=1.4.6
+  - DJANGO_VERSION=1.5.2
 install:
- - pip install -q Django==${DJANGO_VERSION} --use-mirrors
- - pip install -q -r requirements.txt --use-mirrors
-script: fab test
+  - pip install Django==${DJANGO_VERSION}
+  - pip install -r requirements.txt
+matrix:
+  exclude:
+    - python: "3.3"
+      env: DJANGO_VERSION=1.4.6
+script: python run_tests.py
