@@ -1,0 +1,13 @@
+import os
+
+import nose
+
+NAME = os.path.basename(os.path.dirname(__file__))
+ROOT = os.path.abspath(os.path.dirname(__file__))
+
+os.environ['DJANGO_SETTINGS_MODULE'] = 'fake_settings'
+os.environ['PYTHONPATH'] = os.pathsep.join([ROOT,
+                                            os.path.join(ROOT, 'examples')])
+
+if __name__ == '__main__':
+    nose.main()
